@@ -1,3 +1,12 @@
+2009-09-11  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	Backported from mainline:
+	2009-05-08  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/39876
+	* gfortran.dg/intrinsic_3.f90: New.
+
+
 2009-09-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.dg/pr41241.c: Removed.
